v0.4.0-alpha/_sources/parameters.md.txt
# Complete Parameter Reference

Every single parameter in the entire pipeline is described here. If you need to tweak every little detail of how your samples are analyzed, you've come to the right place! Note that *every* parameter is described here, even those that shouldn't be used, so proceed with caution!

## Input/output options

Define where the pipeline should find input data and save output data.

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `input` | Path the folder containing input reads. <details><summary>Help</summary><small>For Illumina (paired-end) reads, the file names must be identical until the ending underscore with a read number, e.g. 'sample1_S10_L001_R1_001.fastq.gz' and 'sample1_S10_L001_R2_001.fastq.gz'. The read number must be designated using either '_1' and '_2' or '_R1' and '_R2'. For Nanopore reads, each fastq file is assumed to be a unique sample, so, e.g. 'FAP01234_pass_barcode05_abcd01234_0.fastq.gz' and 'FAP01234_pass_barcode05_abcd01234_1.fastq.gz' are assumed to be different samples even though they are from the same barcode. All read files must be gzipped, and have the extension '.fastq.gz' or '.fq.gz'.</small></details>| `string` | . |  |
| `sra` | Pull input reads from NCBI SRA <details><summary>Help</summary><small>This flag switches the meaning of `--input` to mean an NCBI Short Read Archive (SRA) accession number, then pulls the associated files directly from NCBI and runs the pipeline on them. To use this flag, you **must** have an [NCBI API key](https://ncbiinsights.ncbi.nlm.nih.gov/2017/11/02/new-api-keys-for-the-e-utilities/) and it **must** be exported in the shell environment as `NCBI_API_KEY`, e.g. `NCBI_API_KEY=0123456789abcdef`. This feature is currenly broken due to an upstream issue in Nextflow, but should be fixed by Nextflow version 21.10.0.</small></details>| `boolean` |  |  |
| `platform` | NGS platform used to sequence the samples | `string` |  |  |
| `pe` | INTERNAL USE ONLY!!! | `boolean` |  |  |
| `ont` | INTERNAL USE ONLY!!! | `boolean` |  |  |
| `seed` | Set the random seed for all applicable processes | `integer` | 42 |  |
| `outdir` | Path to the output directory where the results will be saved. | `string` | ./results |  |
| `publish_dir_mode` | How to create results files | `string` | copy |  |
| `tracedir` | Directory to keep pipeline Nextflow logs and reports. | `string` | ${params.outdir}/pipeline_info |  |
| `help` | Display help text. | `boolean` |  |  |

## Reference genome options

Reference genome related files and options required for the workflow.

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `genome` | NCBI accession number of reference genome <details><summary>Help</summary><small>If using a reference genome configured in the pipeline using iGenomes, use this parameter to give the ID for the reference. This is then used to build the full paths for all required reference genome files e.g. `--genome GRCh38`. 

See the [nf-core website docs](https://nf-co.re/usage/reference_genomes) for more details.</small></details>| `string` | NC_001437.1 |  |
| `genome_list` | Path to TSV file containing NCBI accession numbers of strains for constructing phylogenetic trees. | `string` | jev |  |

## Kraken2 Options

Control how Kraken2 filters out host reads

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `kraken2_db` | Path to a Kraken2 database <details><summary>Help</summary><small>The path to a [Kraken2 database](https://github.com/DerrickWood/kraken2/wiki/Manual#custom-databases) that will be used to filter out host reads in the pipeline. This path will be automatically mounted into the container environments if a containerized profile is used.

Corresponds to the [--db](https://github.com/DerrickWood/kraken2/wiki/Manual#classification) option of Kraken2.</small></details>| `string` | None |  |
| `keep_taxid` | Taxonomic IDs to keep and analyze <details><summary>Help</summary><small>A space-separated list (use quotes on the command line), of the taxonomic ids to keep based on Kraken2's classification.

Defaults to keeping all unclassified reads and all viral reads. Note that this requires the host to be present in the Kraken2 database. When dealing with animals and the databases available from `kraken2-build`, this is not the case, and this parameter should be modified.</small></details>| `string` | 0 10239 |  |

## Read trimming options

Options for how strictly to quality control NGS reads

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `trim_minlen` | Minimum length of reads <details><summary>Help</summary><small>Corresponds to the [MINLEN](http://www.usadellab.org/cms/?page=trimmomatic)
option of Trimmomatic for Illumina reads.

Corresponds to the [--length](https://github.com/wdecoster/nanofilt/#usage)
option of NanoFilt for Nanopore reads.</small></details>| `integer` | 100 |  |
| `trim_maxlen` | Maximum length of reads <details><summary>Help</summary><small>Only applies to Nanopore reads.

Corresponds to the [--maxlength](https://github.com/wdecoster/nanofilt/#usage) option of
NanoFilt.</small></details>| `integer` | 0 |  |
| `trim_adapters` | Sequences to be removed during trimming <details><summary>Help</summary><small>Only applies to Illumina reads. Corresponds to the first
[ILLUMINACLIP](http://www.usadellab.org/cms/?page=trimmomatic) option of
Trimmomatic. If left blank (i.e. `--trim_adapters ''`), then adapter trimming is
disabled. Custom adapters cannot be used, and the parameter corresponds to
one of the prebuilt sequence files provided with Trimmomatic.
</small></details>| `string` | NexteraPE-PE.fa |  |
| `trim_mismatches` | Max number of base mismatches to allow an adapter match <details><summary>Help</summary><small>Only applies to Illumina reads. Corresponds to the second
[ILLUMINACLIP](http://www.usadellab.org/cms/?page=trimmomatic) option of
Trimmomatic.</small></details>| `integer` | 2 |  |
| `trim_pclip` | How accurate the match between adapter ligated reads must be for paired-end palindrome read alignment <details><summary>Help</summary><small>Only applies to Illumina reads. Corresponds to the third
[ILLUMINACLIP](http://www.usadellab.org/cms/?page=trimmomatic) option of
Trimmomatic.</small></details>| `integer` | 30 |  |
| `trim_clip` | How accurate the match between any adapter must be against a read <details><summary>Help</summary><small>Only applies to Illumina reads. Corresponds to the final
[ILLUMINACLIP](http://www.usadellab.org/cms/?page=trimmomatic) option of
Trimmomatic.</small></details>| `integer` | 10 |  |
| `trim_winsize` | Number of bases to average quality across <details><summary>Help</summary><small>Only applies to Illumina reads. If set to `0`, then sliding window trimming is disabled.
Corresponds to the first
[SLIDINGWINDOW](http://www.usadellab.org/cms/?page=trimmomatic) option of
Trimmomatic.</small></details>| `integer` | 50 |  |
| `trim_winqual` | Required average window base quality <details><summary>Help</summary><small>Only applies to Illumina reads. If set to `0`, then sliding window trimming is disabled.
Corresponds to the second
[SLIDINGWINDOW](http://www.usadellab.org/cms/?page=trimmomatic) option of
Trimmomatic.</small></details>| `integer` | 15 |  |
| `trim_leading` | Minimum quality of bases in leading end of read <details><summary>Help</summary><small>Only applies to Illumina reads. If set to `0`, LEADING trimming is disabled.
Corresponds to the
[LEADING](http://www.usadellab.org/cms/?page=trimmomatic) option of
Trimmomatic.</small></details>| `integer` | 15 |  |
| `trim_trailing` | Minimum quality of bases in trailing end of read <details><summary>Help</summary><small>Only applies to Illumina reads. If set to `0`, TRAILING trimming is disabled.
Corresponds to the [TRAILING](http://www.usadellab.org/cms/?page=trimmomatic) option of
Trimmomatic.</small></details>| `integer` | 15 |  |
| `trim_headcrop` | Number of bases to remove from start of read <details><summary>Help</summary><small>Corresponds to the [HEADCROP](http://www.usadellab.org/cms/?page=trimmomatic)
option of Trimmomatic for Illumina reads. If set to `0`, then HEADCROP trimming is disabled.

Corresponds to the [--headcrop](https://github.com/wdecoster/nanofilt/#usage)
option of NanoFilt for Nanopore reads.</small></details>| `integer` | 0 |  |
| `trim_crop` | Number of bases to keep from start of read <details><summary>Help</summary><small>Only applies to Illumina reads. If set to `0`, CROP trimming is disabled.
Corresponds to the
[CROP](http://www.usadellab.org/cms/?page=trimmomatic) option of Trimmomatic.</small></details>| `integer` | 0 |  |
| `trim_meanqual` | Minimum average base quality of entire reads <details><summary>Help</summary><small>Applies only to ONT reads. Corresponds to the
[--quality](https://github.com/wdecoster/nanofilt/#usage) option of NanoFilt.</small></details>| `integer` | 7 |  |
| `trim_mingc` | Minimum GC count of reads <details><summary>Help</summary><small>Only applies to ONT reads. Corresponds to the
[--minGC](https://github.com/wdecoster/nanofilt/#usage) option of NanoFilt.</small></details>| `integer` | 0 |  |
| `trim_maxgc` | Maximum GC count of reads <details><summary>Help</summary><small>Only applies to ONT reads. Corresponds to the
[--maxGC](https://github.com/wdecoster/nanofilt/#usage) option of NanoFilt.</small></details>| `integer` | 0 |  |
| `trim_tailcrop` | Number of bases to remove from the end of each read <details><summary>Help</summary><small>Only applies to ONT reads. Corresponds to the
[--tailcrop](https://github.com/wdecoster/nanofilt/#usage) option of NanoFilt.</small></details>| `integer` | 0 |  |

## de novo assembly options

Options for how to construct contigs

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `spades_mode` | Type of reads to assemble using SPAdes <details><summary>Help</summary><small>Only applies to Illumina reads. This parameter is turned into a flag and passed as the 'mode' to
the SPAdes assembly. Note that the `isolate` and `bio` modes normally provided by SPAdes
are unavailable in the pipeline.

See [SPAdes command line options](https://cab.spbu.ru/files/release3.15.3/manual.html#sec3.2)
for more info on what each of these mean.</small></details>| `string` | rnaviral |  |
| `canu_corrected_error_rate` | How dissimilar two reads can be and still be assembled together <details><summary>Help</summary><small>Only applies to ONT reads. Corresponds to the {ref}`correctedErrorRate` option of Canu.</small></details>| `number` | 0.144 |  |
| `canu_min_read_length` | Minimum length allowed for assembled reads <details><summary>Help</summary><small>Only applies to ONT reads.
Corresponds to the {ref}`minReadLength` option of Canu.</small></details>| `integer` | 1000 |  |
| `canu_min_overlap_length` | Shortest overlap for reads to be assembled together <details><summary>Help</summary><small>Only applies to ONT reads.
Corresponds to the {ref}`minOverlapLength` option of Canu.</small></details>| `integer` | 500 |  |
| `canu_stop_on_low_coverage` | Minimum depth to allow assembly <details><summary>Help</summary><small>Only applies to ONT reads.
Corresponds to the {ref}`stopOnLowCoverage` option of Canu.</small></details>| `integer` | 10 |  |

## Variant calling options

Options for how strict to call variants

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `variant_quality` | Minimum average quality (PHRED score) of a basecall to consider it a variant | `integer` | 12 |  |
| `variant_depth` | Minimum depth to consider a non-reference basecall a variant | `integer` | 15 |  |
| `variant_position` | Do not consider variants that occur only in positions within this percentage of the end | `number` | 0.1 |  |
| `variant_frequency` | Minimum frequency at which a variant must appear | `number` | 0.05 |  |
| `variant_significance` | Confidence threshold for variants based on Fisher's Exact test | `number` | 0.001 |  |

## Haplotype calling options

Options for how strictly to call haplotypes

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `haplotype_depth` | Minmum number of times a haplotype must appear | `integer` | 10 |  |
| `haplotype_frequency` | Minimum haplotype frequency | `number` | 0.05 |  |
| `haplotype_significance` | Confidence threshold for haplotypes based on a X-squared test of linkage disequilibrium | `number` | 0.05 |  |
| `haplotype_method` | How to construct pseudo-reads for haplotyping | `string` | ml-template |  |
| `haplotype_overlap_min` | Minimum number of bases reads must overlap to be built into the same pseudo-read | `integer` | 0 |  |
| `haplotype_overlap_max` | Maximum number of bases reads must overlap to be built into the same pseudo-read | `integer` | 100 |  |
| `haplotype_iterations` | Number of iterations to build pseudo-reads | `integer` | 1000 |  |

## Phylogenetic tree options

Options to control how the phylogenetic trees are generated

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `phylogenetic_bootstraps` | Number of iterations to create phylogenetic trees with | `integer` | 1000 |  |
| `phylogenetic_bootstrap_cutoff` | Minimum quality for phylogenetic bootstraps | `number` | 0.03 |  |

## Workflow options

Options to skip portions of the workflow

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `skip_trimming` | Skip read trimming (Trimmomatic/Nanofilt) | `boolean` |  |  |
| `skip_qc` | Skip FastQC | `boolean` |  |  |
| `skip_filtering` | Skip Kraken2 | `boolean` |  |  |
| `skip_assembly` | Skip _de novo_ assembly (SPAdes/canu) | `boolean` |  |  |
| `skip_haplotype` | Skip haplotyping (CliqueSNV/HapLink) | `boolean` |  |  |

## Max job request options

Set the top limit for requested resources for any single job.

| Parameter | Description | Type | Default | Required |
|-----------|-----------|-----------|-----------|-----------|
| `max_cpus` | Maximum number of CPUs that can be requested for any single job. <details><summary>Help</summary><small>Use to set an upper-limit for the CPU requirement for each process. Should be an integer e.g. `--max_cpus 1`</small></details>| `integer` | 16 |  |
| `max_memory` | Maximum amount of memory that can be requested for any single job. <details><summary>Help</summary><small>Use to set an upper-limit for the memory requirement for each process. Should be a string in the format integer-unit e.g. `--max_memory '8.GB'`</small></details>| `string` | 128.GB |  |
| `max_time` | Maximum amount of time that can be requested for any single job. <details><summary>Help</summary><small>Use to set an upper-limit for the time requirement for each process. Should be a string in the format integer-unit e.g. `--max_time '2.h'`</small></details>| `string` | 240.h |  |
